--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,9 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.container{
+    font-family: sans-serif;
+    color:green;
+    margin: 0 auto;
+    max-width: 800px;
+}
